tests/decl/mixed_3.c
int symbol;

void symbol(char x)
{
  int x;
  char y;
}

extra stuff
